# django-docserve

./: README.md  customisation_more.md  manifest.in  mixins.py  pyproject.toml  requirements.txt  setup.py
docserve/: apps.py  build_docs.sh  mixins.py  urls.py  views.py
docserve/management/commands/: build_docs.py  generate_mkdocs_yml.py  make.py
docserve/templates/docserve/: docs_home.html
docserve/tests/: test_generate_mkdocs_yml.py
