[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "django-docserve"
version = "1.0.0"
description = "A reusable Django app to serve MkDocs documentation based on user roles."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Phoebe Bright", email = "phoebebright310@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=3.2,<7.0",
    "mkdocs-material>=9.1.15",
    "setuptools>=65.5.1",
]

[project.urls]
Homepage = "https://github.com/phoebebright/django-docserve"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"*" = ["templates/**/*"]
